--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       }
     ]
   },
-  "exclude": ["node_modules", "public/sw.js"],
+  "exclude": ["node_modules", "public/sw.js", "scripts/migrateClientDB/compile-migrations.ts"],
   "include": [
     "next-env.d.ts",
     "vitest.config.ts",
